openshift-gitops/clusters/polaris/apps/external-secrets/base/ns-external-secrets.yaml
apiVersion: v1
kind: Namespace
metadata:
  annotations:
    openshift.io/display-name: "External Secrets"
  name: external-secrets
