openshift-gitops/clusters/polaris/apps/external-secrets/base/np-allow-https-egress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-https-egress
  namespace: external-secrets
spec:
  podSelector:
    matchExpressions:
    - key: app.kubernetes.io/name
      operator: In
      values:
      - external-secrets
      - external-secrets-webhook
      - external-secrets-cert-controller
  policyTypes:
  - Egress
  egress:
  - ports:
    - protocol: TCP
      port: 443
